tests-integration/tests/custom/syntax-errors/missing-token-keyword/model.eprime
find x,y,z : int(1..3) 
such that x = y =
such that z = 3